test: not use jsdom, use cheerio.

--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "espower-loader": "",
     "jsdoc": "",
     "http-server": "",
-    "escape-html": "",
-    "fs-extra": "",
-    "jsdom": ""
+    "cheerio": ""
   },
+
+  "dependencies": {
+    "escape-html": "",
+    "fs-extra": ""
+  },
+
   "main": "out/src/publish.js"
 }
