--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "http-server": "",
     "cheerio": "",
     "taffydb": "https://github.com/hegemonic/taffydb/tarball/7d100bcee0e997ee4977e273cdce60bd8933050e",
-    "istanbul": ""
+    "istanbul": "",
+    "coveralls": ""
   },
   "dependencies": {
     "escape-html": "",
